Fix the keybinding condition.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "keybindings": [
       {
         "command": "ghosttyper.fixTypo",
-        "key": "ctrl+;"
+        "key": "ctrl+;",
+        "when": "editorTextFocus"
       }
     ]
   },
