Fix the display name of the extension.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ghosttyper",
-  "displayName": "ghosttyper",
+  "displayName": "GhostTyper",
   "publisher": "PND",
   "description": "Type faster. Stay in the flow.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.60.0"
   },
